--- a/apps/webapp/chess/src/app/app.component.html
+++ b/apps/webapp/chess/src/app/app.component.html
@@ -8,24 +8,31 @@
 </head>
 
 <body class="w3-light-grey">
-    <nav>
-      <ul>
-        <li><a routerLink="profile">Profile</a></li>
-        <li><a routerLink="new-game">New Game</a></li>
-        <li><a routerLink="find-game">Find Game</a></li>
-        <li class="w3-right"><a routerLink="logout">Logout</a></li>
-        <li class="w3-right"><a routerLink="login">Login</a></li>
-      </ul>
-    </nav>
-    <router-outlet></router-outlet>
-    <div class="w3-center w3-margin-top">
-      <p>Have a great semester.</p>
+  <nav>
+    <ul>
+      <li><a routerLink="profile">Profile</a></li>
+      <li><a routerLink="new-game">New Game</a></li>
+      <li><a routerLink="find-game">Find Game</a></li>
+      <li class="w3-right"><a routerLink="logout">Logout</a></li>
+      <li class="w3-right"><a routerLink="login">Login</a></li>
+    </ul>
+  </nav>
+  <router-outlet></router-outlet>
+  <form id="surveyForm" #surveySubmission="ngForm" (ngSubmit)="onClickSubmit(surveySubmission.value)" method="post">
+
+    <div class="w3-center w3-margin-top  w3-margin-bottom">
+      <button type="submit">Submit</button>
+      <button type="reset">Cancel</button>
     </div>
-    <footer class="w3-container w3-teal w3-margin-top">
-      <p>
-        Powered by <a href="https://cs.gmu.edu" target="_blank">cs.gmu.edu</a>
-      </p>
-    </footer>
+  </form>
+  <div class="w3-center w3-margin-top">
+    <p>Have a great semester.</p>
+  </div>
+  <footer class="w3-container w3-teal w3-margin-top">
+    <p>
+      Powered by <a href="https://cs.gmu.edu" target="_blank">cs.gmu.edu</a>
+    </p>
+  </footer>
 </body>
 
 </html>
