--- a/apps/webapp/chess/src/app/app.component.html
+++ b/apps/webapp/chess/src/app/app.component.html
@@ -10,10 +10,10 @@
 <body class="w3-light-grey">
     <nav>
       <ul>
-        <li *ngIf="loggedIn"><a routerLink="profile">Profile</a></li>
-        <li *ngIf="notInGame"><a routerLink="new-game">New Game</a></li>
+        <li *ngIf="loggedIn && notInGame"><a routerLink="profile">Profile</a></li>
+        <li *ngIf="notInGame"><a routerLink="gamestate">New Game</a></li>
         <li *ngIf="notInGame"><a routerLink="find-game">Find Game</a></li>
-        <li *ngIf="loggedIn" class="w3-right"><a routerLink="logout">Logout</a></li>
+        <li *ngIf="loggedIn" class="w3-right"><a (click)="logout()">Logout</a></li>
         <li *ngIf="notLoggedIn" class="w3-right"><a routerLink="login">Login</a></li>
       </ul>
     </nav>
