--- a/apps/webapp/chess/src/app/view/login/login.component.html
+++ b/apps/webapp/chess/src/app/view/login/login.component.html
@@ -12,7 +12,7 @@
     <div class="w3-whole w3-container w3-card w3-white w3-margin-bottom">
       <div class="w3-center w3-xlarge">Login</div>
       <div class="w3-whole">
-        <form id="surveyForm" [formGroup]="loginForm">
+        <form id="loginForm" [formGroup]="loginForm">
           <div>
             <div>
               <label for="username">Username:</label>
