updated front-end, service methods, and quitting link guards

--- a/apps/webapp/chess/src/app/app.component.html
+++ b/apps/webapp/chess/src/app/app.component.html
@@ -12,7 +12,7 @@
       <ul>
         <li *ngIf="loggedIn && notInGame"><a routerLink="profile">Profile</a></li>
         <li *ngIf="loggedIn && notInGame"><a routerLink="gamestate">New Game</a></li>
-        <li *ngIf="loggedIn && notInGame"><a routerLink="find-game">Find Game</a></li>
+        <li *ngIf="loggedIn && notInGame"><a routerLink="findgame">Find Game</a></li>
         <li *ngIf="loggedIn" class="w3-right"><a (click)="logout()">Logout</a></li>
         <li *ngIf="notLoggedIn" class="w3-right"><a routerLink="login">Login</a></li>
       </ul>
