--- a/apps/webapp/chess/src/app/view/profile/profile.component.html
+++ b/apps/webapp/chess/src/app/view/profile/profile.component.html
@@ -10,10 +10,11 @@
 <body class="w3-light-grey">
   <div class="formContainer">
     <form id="gameForm">
-      <div>
+      <div class="w3-margin-top w3-center">
+        <h4>Profile</h4>
         <div>
           <div>
-            <span>Username: {{user.username}}</span>
+            <span>Username: {{profile.username}}</span>
           </div>
           <div>
             <span>Wins: {{profile.wins}}</span>
@@ -23,15 +24,30 @@
           </div>
         </div>
       </div>
-      <div class="w3-margin-top">
-        TOP PLAYERS
-      </div>
-      <div *ngFor="let topPlayer of getTopPlayers()">
-        <div>
-          <span>username: {{topPlayer.username}}</span> | 
-          <span>wins: {{topPlayer.wins}}</span> | 
-          <span>losses: {{topPlayer.losses}}</span>
-        </div>
+      <div class="w3-margin-top w3-center">
+        <h4>
+          Game History
+        </h4>
+        <table class="center-table w3-table-all">
+          <thead>
+            <tr>
+              <th class="table-main-header">Game</th>
+              <th class="table-main-header">User Won Game</th>
+              <th class="table-main-header">Action</th>
+              <th class="table-sub-header">Win/Loss By</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let game of getGames(); let i = index;">
+              <td>{{i + 1}}</td>
+              <td>{{userWonGame(game)}}</td>
+              <td>
+                <button form="submit" (click)="viewGame(game)">View Game History</button>
+              </td>
+              <td>{{game.winner_by.toUpperCase()}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="w3-center w3-margin-top w3-margin-bottom">
         <button type="submit" (click)="returnHome()">Return</button>
