--- a/apps/webapp/chess/src/app/view/history/history.component.html
+++ b/apps/webapp/chess/src/app/view/history/history.component.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Game</title>
+  <title>History</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
