--- a/apps/webapp/chess/src/app/view/find-game/find-game.component.html
+++ b/apps/webapp/chess/src/app/view/find-game/find-game.component.html
@@ -6,6 +6,9 @@
 
 <body class="w3-light-grey">
   <div class="w3-content w3-margin-top" style="max-width: 1400px;">
+    <div>
+      <a *ngIf="gameExists" (click)="joinLastGame()">Join current game</a>
+    </div>
     <div class="w3-whole w3-container w3-card w3-white w3-margin-bottom">
       <div class="w3-center w3-xlarge">All Games</div>
       <div>{{joinStatus}}</div>
